--- a/index.ipynb
+++ b/index.ipynb
@@ -200,14 +200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-4c2def9c5306>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-4c2def9c5306>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    ends_with_com.endswith(.com)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "ends_with_com = \"art.vandelay@vandelay.co\" # False\n",
-    "ends_with_com.ends"
+    "ends_with_com.endswith(.com)"
    ]
   },
   {
