Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    ],
    "source": [
     "ends_with_com = \"art.vandelay@vandelay.co\" # False\n",
-    "bool(ends_with_com.endswith()"
+    "bool(ends_with_com.endswith(\".com\")"
    ]
   },
   {
